<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/title_create"/>

    <item
        android:id="@+id/navigation_squads"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_squad"
        />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_terrain_black_24dp"
        android:title="@string/title_my_trips"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"/>

</menu>
