<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.adventuresquad.activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_image_highlight"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:background="?android:attr/panelFullBackground"
            android:contentDescription="@string/profile_image_highlight_description"
            android:scaleType="centerCrop"
            android:src="@drawable/adventure_placeholder"/>

        <!--TODO - replace with circle image view-->
        <!--java.lang.RuntimeException: Unable to start activity ComponentInfo{com.adventuresquad/com.adventuresquad.activity.ProfileActivity}:
        android.view.InflateException:
        Binary XML file line #36: Binary XML file line #26: Error inflating class android.support.v4.widget.CircleImageView-->
        <ImageView
            android:id="@+id/profile_image_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="119dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_placeholder"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/profile_text"
            android:layout_alignStart="@+id/profile_text"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/placeholder_text_loading"
            android:layout_marginBottom="13dp"
            android:layout_alignBottom="@+id/profile_image_highlight"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image_person"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
